[package]
name = "raytracer"
version = "0.1.0"
authors = ["Your name <name@example.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.2"
console = "0.15.0"    # console text format
indicatif = "0.16.2" # progress bar
